[package]
name = "mempool"
version = "0.1.0"
authors = ["drklee3 <derrick@dlee.dev>"]
edition = "2018"

[lib]
name = "mempool"
path = "src/lib.rs"

[[bin]]
name = "mempool"
path = "src/main.rs"

[dependencies]
structopt = "0.3.22"
thiserror = "1.0.26"

[dev-dependencies]
criterion = "0.3"
rand = "0.8.4"

[[bench]]
name = "mempool_bench"
harness = false
